Add link to the presentation

--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@ end
           <p>
             <small>By <a href="http://david.rousselie.name">David Rousselie</a> / <a href="http://twitter.com/drousselie">@drousselie</a></small>
           </p>
+          <small><a href="http://fasterize.github.io/docker-at-fasterize">http://fasterize.github.io/docker-at-fasterize</a></small>
         </section>
 
       </div>
